--- a/src/Sandbox.HierarchicalFunctionalAreasWithNancyFX/Home/_views/Index.cshtml
+++ b/src/Sandbox.HierarchicalFunctionalAreasWithNancyFX/Home/_views/Index.cshtml
@@ -4,7 +4,8 @@
 
 <section>
     <h1>Welcome to HFA</h1>
-    <p><em>quality shoes for women and men</em></p>
+    <h4><em>quality shoes for women and men</em></h4>
+    <hr/>
 </section>
 
 @Html.Partial("Featured")
